Update Customer Churn Prediction for Banking Services.ipynb

--- a/Customer Churn Prediction for Banking Services.ipynb
+++ b/Customer Churn Prediction for Banking Services.ipynb
@@ -40,10 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the Google Sheets URL components\n",
-    "sheet_id = '1IC8atZW1Y8UbGR1yGKtMwBd-e4v4jVPyY2u2MGcBoUQ'\n",
-    "sheet_gid = '684236481'\n",
-    "csv_url = f'https://docs.google.com/spreadsheets/d/{sheet_id}/export?format=csv&gid={sheet_gid}'"
+    "# Load dataset
+    "csv = 'dataset.csv'"
    ]
   },
   {
@@ -54,7 +52,7 @@
    "outputs": [],
    "source": [
     "# Load the data into a DataFrame\n",
-    "data = pd.read_csv(csv_url)"
+    "data = pd.read_csv(csv)"
    ]
   },
   {
